--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: paulodtn
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          svg_out_path: dist/snake.svg
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
